--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(DSA_Striver_150Challenge main.cpp
         Arrays/CountDigits.cpp
         "Basic Maths/CountDigits.cpp"
+        "Basic Maths/CheckPalindrome.cpp"
 )
